--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ server.servlet.jsp.init-parameters.development=true
 server.port=8081
 mybatis.type-aliases-package=com.jh.entity
 mybatis.mapper-locations=com/jh/mapper/*Mapper.xml
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n 
+logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
