--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
             <version>1.2.41</version>
         </dependency>
 
+        <!--文件上传下载-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
