--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>2.4</version>
         </dependency>
 
+        <!-- 引入redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+
         <!-- 引入对jsp的支持 -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -122,6 +129,12 @@
             <version>4.5</version>
         </dependency>
 
+        <!--mybatis插件-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
         <!--阿里JSON-->
         <dependency>
@@ -136,6 +149,26 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.3</version>
         </dependency>
+
+       <!-- 爬虫框架
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+            <version>0.7.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-extension</artifactId>
+            <version>0.7.3</version>
+        </dependency>
+-->
+
 
     </dependencies>
 
