--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,6 @@ logging.level.com.xh.dao=trace
 logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n 
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
-#spring.redis.host=
-#spring.redis.port=
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123456
