--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&amp;characterEncoding=utf8
 spring.datasource.password=root
 spring.datasource.username=root
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+#spring.thymeleaf.prefix=classpath:/
+#spring.thymeleaf.suffix=.jsp
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.servlet.context-path=/jhzf
 server.servlet.jsp.init-parameters.development=true
